<resources>
    <string name="app_name">IWantToBeSuperMVP</string>

    <string name="sign_id_text">깃허브 아이디</string>
    <string name="sign_password_text">비밀번호</string>
    <string name="sign_in_button_text">LOGIN</string>
    <string name="sign_up_name">이름</string>
    <string name="sign_up_button_text">SIGNUP</string>
    <string name="sign_in_no_user_text">아이디/비밀번호가 없으신가요?</string>
    <string name="sign_up_text"><u>회원가입</u></string>

    <string name="home_self_presentation_text">scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!!scrolling!!</string>
</resources>